[gd_scene load_steps=5 format=3 uid="uid://p11tv54hqclr"]

[ext_resource type="Script" path="res://src/game/game.gd" id="1_2qp6o"]
[ext_resource type="PackedScene" uid="uid://kp1l1j4p1v0l" path="res://src/game/enemy_manager/enemy_manager.tscn" id="2_v44f7"]
[ext_resource type="PackedScene" uid="uid://ch2ar1xjib3c1" path="res://src/game/projectile_manager/projectile_manager.tscn" id="3_mqq3e"]
[ext_resource type="PackedScene" uid="uid://p3d2giphc5wu" path="res://src/characters/character_1/character_1.tscn" id="4_nhvt1"]

[node name="Game" type="Node2D"]
script = ExtResource("1_2qp6o")

[node name="EnemyManager" parent="." instance=ExtResource("2_v44f7")]
unique_name_in_owner = true

[node name="ProjectileManager" parent="." instance=ExtResource("3_mqq3e")]
unique_name_in_owner = true

[node name="character1" parent="." instance=ExtResource("4_nhvt1")]
unique_name_in_owner = true
position = Vector2(571, 540)
